--- a/technitium-dns/values.yaml
+++ b/technitium-dns/values.yaml
@@ -18,7 +18,21 @@ nameOverride: ""
 fullnameOverride: ""
 
 # -- DNS server domain name used to identify itself
+# When clustering is enabled, this is overridden per-pod using the pod's FQDN
 serverDomain: "dns-server"
+
+# -- Clustering configuration for multi-replica deployments
+# Technitium supports clustering where pod-0 acts as the primary node
+# and additional pods are secondaries that sync configuration from the primary.
+# See: https://blog.technitium.com/2025/11/understanding-clustering-and-how-to.html
+clustering:
+  # -- Enable clustering support (automatically configures per-pod domain names,
+  # HTTPS with self-signed certs, and pod anti-affinity)
+  enabled: false
+  # -- Use pod anti-affinity to spread replicas across nodes
+  podAntiAffinity: true
+  # -- Topology spread constraints for cluster pods
+  topologySpreadConstraints: []
 
 # -- Admin password configuration
 admin:
