--- a/technitium-dns/values.yaml
+++ b/technitium-dns/values.yaml
@@ -1,5 +1,5 @@
-# -- Number of replicas
-replicaCount: 1
+# -- Number of replicas (3 recommended for clustering)
+replicaCount: 3
 
 image:
   # -- Container image repository
@@ -28,7 +28,7 @@ serverDomain: "dns-server"
 clustering:
   # -- Enable clustering support (automatically configures per-pod domain names,
   # HTTPS with self-signed certs, and pod anti-affinity)
-  enabled: false
+  enabled: true
   # -- Use pod anti-affinity to spread replicas across nodes
   podAntiAffinity: true
   # -- Topology spread constraints for cluster pods
