--- a/technitium-dns/templates/statefulset.yaml
+++ b/technitium-dns/templates/statefulset.yaml
@@ -26,6 +26,9 @@ spec:
       {{- if .Values.serviceAccount.create }}
       serviceAccountName: {{ include "technitium-dns.serviceAccountName" . }}
       {{- end }}
+      {{- if .Values.priorityClassName }}
+      priorityClassName: {{ .Values.priorityClassName }}
+      {{- end }}
       {{- with .Values.podSecurityContext }}
       securityContext:
         {{- toYaml . | nindent 8 }}
